Done what i can for now

--- a/Erfarenheter.html
+++ b/Erfarenheter.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8" />
     <meta content="HTML, CSS" />
     <meta lang="sv" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.85" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/ME.jpg" />
     <title>Simon Jonsson - web developer</title>
   </head>
   <body>
-    <div class="link-tree">        
-      <div><nav>
-      <label for="toggle">Meny</label>
-      <input type="checkbox" id="toggle">            
-      <ul>
-        <li><a href="index.html">Hem</a></li>
-        <li><a href="Om.html">Om mig</a></li>
-        <li><a href="Erfarenheter.html">Erfarenheter</a></li>
-        <li><a href="Portfolio.html">Portfolio</a></li>
-        <li><a href="Kontakt.html">Kontakta</a></li>            
-      </ul>
-    </nav></div>           
-  </div>
-  <div class="imglink">
+    <div class="link-tree">
+      <div>
+        <nav>
+          <label for="toggle">Meny</label>
+          <input type="checkbox" id="toggle" />
+          <ul>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="Om.html">Om mig</a></li>
+            <li><a href="Erfarenheter.html">Erfarenheter</a></li>
+            <li><a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="Kontakt.html">Kontakta</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="imglink">
+      <div>
+        <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">
+          <img src="./images/linkedin.png" height="60" width="60"
+        /></a>
+        <a href="https://github.com/Behemoth39">
+          <img src="./images/GitHub.png" height="60" width="60"
+        /></a>
+      </div>
+    </div>
+    <div class="imglink">
       <div>
         <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">
           <img src="./images/linkedin.png" height="40" width="40"
@@ -55,9 +67,11 @@
         <!-- Hade vart fint med en visualisering på hur mycket av varje "språk" och typ av arbete jag gjort: likt https://jacekjeznach.com/skills -->
         <h2>Kompetens och erfarenhet</h2>
         <p>
-          För tillfället är jag under utbilding och har inte byggt några större appar eller sidor än.
-          Hittills har jag lärt mig grunderna i HTML och CSS. Framöver kommer jag även lära mig JavaScript frameworks som React, Angular, Vue.js.
-          Men även .Net och SQLite. Efter detta kommer jag att kunna jobba som junior Full-stack developer.
+          För tillfället är jag under utbilding och har inte byggt några större
+          appar eller sidor än. Hittills har jag lärt mig grunderna i HTML och
+          CSS. Framöver kommer jag även lära mig JavaScript frameworks som
+          React, Angular, Vue.js. Men även .Net och SQLite. Efter detta kommer
+          jag att kunna jobba som junior Full-stack developer.
         </p>
         <p>
           Spana in min
