--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,28 +4,40 @@
     <meta charset="UTF-8" />
     <meta content="HTML, CSS" />
     <meta lang="sv" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.85" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/ME.jpg" />
     <title>Simon Jonsson - web developer</title>
   </head>
   <body>
-    <div class="link-tree">        
-      <div><nav>
-      <label for="toggle">Meny</label>
-      <input type="checkbox" id="toggle">            
-      <ul>
-        <li><a href="index.html">Hem</a></li>
-        <li><a href="Om.html">Om mig</a></li>
-        <li><a href="Erfarenheter.html">Erfarenheter</a></li>
-        <li><a href="Portfolio.html">Portfolio</a></li>
-        <li><a href="Kontakt.html">Kontakta</a></li>            
-      </ul>
-    </nav></div>           
-  </div>
+    <div class="link-tree">
+      <div>
+        <nav>
+          <label for="toggle">Meny</label>
+          <input type="checkbox" id="toggle" />
+          <ul>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="Om.html">Om mig</a></li>
+            <li><a href="Erfarenheter.html">Erfarenheter</a></li>
+            <li><a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="Kontakt.html">Kontakta</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="imglink">
+      <div>
+        <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">
+          <img src="./images/linkedin.png" height="60" width="60"
+        /></a>
+        <a href="https://github.com/Behemoth39">
+          <img src="./images/GitHub.png" height="60" width="60"
+        /></a>
+      </div>
+    </div>
     <div class="contain">
       <!-- Någon form av "transition" skulle vara bäst att ha mellan sidor  -->
-      <div class="menu">        
+      <div class="menu">
         <div>
           <a href="index.html"><h4>Hem</h4></a>
         </div>
@@ -45,21 +57,36 @@
       <div class="content">
         <div class="port">
           <!-- Fixa till preview på länkarna -->
-          <div>
-            <a href="https://github.com/Behemoth39/CV-Portfolio-">
-              <img src="https://github.com/Behemoth39/CV-Portfolio-" height="250" width="250"/>
+          <div>                       
+            <a href="https://github.com/Behemoth39/CV-Portfolio-">              
+              <img
+                src="https://raw.githubusercontent.com/Behemoth39/CV-Portfolio-/main/images/Backgr.jpg"
+                height="250"
+                width="250"
+              />
+              <div class="text-img"><p>CV-Portfolio</p></div> 
+            </a>            
+          </div>
+          <div>             
+            <a href="https://github.com/Behemoth39/uppgift1_html">                            
+              <img
+                src="https://avatars.githubusercontent.com/u/109914212?v=4"
+                height="250"
+                width="250"
+              />
+              <div class="text-img"><p>CV-Portfolio</p></div> 
+            </a>                       
+          </div>
+          <div>             
+            <a href="https://github.com/Behemoth39/uppgift2_html">
+              <img
+                src="https://avatars.githubusercontent.com/u/109914212?v=4"
+                height="250"
+                width="250"
+              />
+              <div class="text-img"><p>CV-Portfolio</p></div>
             </a>
           </div>
-          <div>
-            <a href="https://github.com/Behemoth39/uppgift1_html">
-              <img src="https://github.com/Behemoth39/uppgift1_html" height="250" width="250"/>
-            </a>
-          </div>   
-          <div>
-            <a href="https://github.com/Behemoth39/uppgift2_html">
-              <img src="https://github.com/Behemoth39/uppgift2_html" height="250" width="250"/>
-            </a>
-          </div>                       
         </div>
       </div>
       <div class="links">
