--- a/Kontakt.html
+++ b/Kontakt.html
@@ -4,25 +4,37 @@
     <meta charset="UTF-8" />
     <meta content="HTML, CSS" />
     <meta lang="sv" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.85" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/ME.jpg" />
     <title>Simon Jonsson - web developer</title>
   </head>
   <body>
-    <div class="link-tree">        
-      <div><nav>
-      <label for="toggle">Meny</label>
-      <input type="checkbox" id="toggle">            
-      <ul>
-        <li><a href="index.html">Hem</a></li>
-        <li><a href="Om.html">Om mig</a></li>
-        <li><a href="Erfarenheter.html">Erfarenheter</a></li>
-        <li><a href="Portfolio.html">Portfolio</a></li>
-        <li><a href="Kontakt.html">Kontakta</a></li>            
-      </ul>
-    </nav></div>           
-  </div>
+    <div class="link-tree">
+      <div>
+        <nav>
+          <label for="toggle">Meny</label>
+          <input type="checkbox" id="toggle" />
+          <ul>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="Om.html">Om mig</a></li>
+            <li><a href="Erfarenheter.html">Erfarenheter</a></li>
+            <li><a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="Kontakt.html">Kontakta</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="imglink">
+      <div>
+        <a href="https://www.linkedin.com/in/simon-jonsson-0860891b5/">
+          <img src="./images/linkedin.png" height="60" width="60"
+        /></a>
+        <a href="https://github.com/Behemoth39">
+          <img src="./images/GitHub.png" height="60" width="60"
+        /></a>
+      </div>
+    </div>
     <div class="contain">
       <div class="menu">
         <div>
@@ -44,7 +56,8 @@
       <div class="content">
         <h1>Kontakt</h1>
         <p>
-          Har du frågor eller sugen på att sammarbeta?<br> Skicka gärna ett mail:
+          Har du frågor eller sugen på att sammarbeta?<br />
+          Skicka gärna ett mail:
           <a class="mail" href="mailto:simme_jonsson@hotmail.com"
             >simme_jonsson@hotmail.com
           </a>
