--- a/Portfolio.html
+++ b/Portfolio.html
@@ -74,7 +74,7 @@
                 height="250"
                 width="250"
               />
-              <div class="text-img"><p>CV-Portfolio</p></div> 
+              <div class="text-img"><p>uppgift1</p></div> 
             </a>                       
           </div>
           <div>             
@@ -84,7 +84,7 @@
                 height="250"
                 width="250"
               />
-              <div class="text-img"><p>CV-Portfolio</p></div>
+              <div class="text-img"><p>uppgift2</p></div>
             </a>
           </div>
         </div>
