--- a/Erfarenheter.html
+++ b/Erfarenheter.html
@@ -19,7 +19,7 @@
             <li><a href="index.html">Hem</a></li>
             <li><a href="Om.html">Om mig</a></li>
             <li><a href="Erfarenheter.html">Erfarenheter</a></li>
-            <li><a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="Portfolio.html">Projekt</a></li>
             <li><a href="Kontakt.html">Kontakta</a></li>
           </ul>
         </nav>
@@ -47,7 +47,7 @@
           <a href="Erfarenheter.html"><h4>Erfarenheter</h4></a>
         </div>
         <div>
-          <a href="Portfolio.html"><h4>Portfolio</h4></a>
+          <a href="Portfolio.html"><h4>Projekt</h4></a>
         </div>
         <div>
           <a href="Kontakt.html"><h4>Kontakta</h4></a>
@@ -59,9 +59,7 @@
         <p>
           För tillfället är jag under utbilding och har inte byggt några större
           appar eller sidor än. Hittills har jag lärt mig grunderna i HTML och
-          CSS. Framöver kommer jag även lära mig JavaScript frameworks som
-          React, Angular, Vue.js. Men även .Net och SQLite. Efter detta kommer
-          jag att kunna jobba som junior Full-stack developer.
+          CSS. Men med tiden kommer detta att byggas på med fler språk och ramverk. 
         </p>
         <p>
           Spana in min
