--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <li><a href="index.html">Hem</a></li>
               <li><a href="Om.html">Om mig</a></li>
               <li><a href="Erfarenheter.html">Erfarenheter</a></li>
-              <li><a href="Portfolio.html">Portfolio</a></li>
+              <li><a href="Portfolio.html">Projekt</a></li>
               <li><a href="Kontakt.html">Kontakta</a></li>
             </ul>
           </nav>
@@ -48,7 +48,7 @@
           <a href="Erfarenheter.html"><h4>Erfarenheter</h4></a>
         </div>
         <div>
-          <a href="Portfolio.html"><h4>Portfolio</h4></a>
+          <a href="Portfolio.html"><h4>Projekt</h4></a>
         </div>
         <div>
           <a href="Kontakt.html"><h4>Kontakta</h4></a>
