Added placeholder for now

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta content="HTML, CSS" />
     <meta lang="sv" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.85" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.8" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/ME.jpg" />
-    <title>Simon Jonsson - web developer</title>
+    <title>Simon Jonsson</title>
   </head>
   <body>
     <div class="link-tree">
@@ -60,11 +60,11 @@
           <div>                       
             <a href="https://github.com/Behemoth39/CV-Portfolio-">              
               <img
-                src="https://raw.githubusercontent.com/Behemoth39/CV-Portfolio-/main/images/Backgr.jpg"
+                src="./Placeholder/CV.jpg"
                 height="250"
                 width="250"
               />
-              <div class="text-img"><p>CV-Portfolio</p></div> 
+              <div class="text-img"><p>Denna sida</p></div> 
             </a>            
           </div>
           <div>             
