--- a/Om.html
+++ b/Om.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta content="HTML, CSS" />
     <meta lang="sv" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.85" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.8" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/ME.jpg" />
-    <title>Simon Jonsson - web developer</title>
+    <title>Simon Jonsson</title>
   </head>
   <body>
     <div class="link-tree">
