--- a/Portfolio.html
+++ b/Portfolio.html
@@ -87,6 +87,16 @@
               <div class="text-img"><p>uppgift2</p></div>
             </a>
           </div>
+          <div>             
+            <a href="https://github.com/Behemoth39/Fryele-Stallklubb-">
+              <img
+                src="./Placeholder/Fryele.png"
+                height="250"
+                width="250"
+              />
+              <div class="text-img"><p>Fryele</p></div>
+            </a>
+          </div>
         </div>
       </div>
       <div class="links">
