--- a/Portfolio.html
+++ b/Portfolio.html
@@ -57,44 +57,44 @@
       <div class="content">
         <div class="port">
           <!-- Fixa till preview på länkarna -->
-          <div>                       
-            <a href="https://github.com/Behemoth39/CV-Portfolio-">              
-              <img
-                src="./Placeholder/CV.jpg"
-                height="250"
-                width="250"
-              />
-              <div class="text-img"><p>Denna sida</p></div> 
-            </a>            
-          </div>
-          <div>             
-            <a href="https://github.com/Behemoth39/uppgift1_html">                            
+          <div>
+            <a href="https://github.com/Behemoth39/FC-Projekt">
               <img
                 src="https://avatars.githubusercontent.com/u/109914212?v=4"
                 height="250"
                 width="250"
               />
-              <div class="text-img"><p>uppgift1</p></div> 
-            </a>                       
-          </div>
-          <div>             
-            <a href="https://github.com/Behemoth39/uppgift2_html">
-              <img
-                src="https://avatars.githubusercontent.com/u/109914212?v=4"
-                height="250"
-                width="250"
-              />
-              <div class="text-img"><p>uppgift2</p></div>
+              <div class="text-img"><p>FC-Projekt</p></div>
             </a>
           </div>
-          <div>             
-            <a href="https://github.com/Behemoth39/Fryele-Stallklubb-">
+          <div>
+            <a href="https://github.com/Behemoth39/FC-React">
               <img
-                src="./Placeholder/Fryele.png"
+                src="https://avatars.githubusercontent.com/u/109914212?v=4"
                 height="250"
                 width="250"
               />
-              <div class="text-img"><p>Fryele</p></div>
+              <div class="text-img"><p>FC-React</p></div>
+            </a>
+          </div>
+          <div>
+            <a href="https://github.com/Behemoth39/WCE">
+              <img
+                src="https://avatars.githubusercontent.com/u/109914212?v=4"
+                height="250"
+                width="250"
+              />
+              <div class="text-img"><p>WCE</p></div>
+            </a>
+          </div>
+          <div>
+            <a href="https://github.com/Behemoth39/MVC-Projekt">
+              <img
+                src="https://avatars.githubusercontent.com/u/109914212?v=4"
+                height="250"
+                width="250"
+              />
+              <div class="text-img"><p>MVC-Projekt</p></div>
             </a>
           </div>
         </div>
